grafana-tempo-test/svc-minio.yaml
kind: Service
apiVersion: v1
metadata:
  name: grafana-tempo-minio
  namespace: grafana-tempo-test
spec:
  ports:
    - port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app.kubernetes.io/name: minio
  type: ClusterIP
