grafana-tempo-test/route-jaeger.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: jaeger-http
spec:
  host: jaeger.apps.baloise.dev
  to:
    kind: Service
    name: tempo-simplest-query-frontend
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
